--- a/application-dev.yml
+++ b/application-dev.yml
@@ -100,7 +100,7 @@ hystrix:
             timeoutInMilliseconds: 20000
 
 info:
-  软件著作权: paascloud快速搭建企业级分布式微服务平台
+  软件著作权: paascloud快速搭建企业级分布式微服务平台233333hahah
   著作登记号: 2018SR320076
   关于我们: http://paascloud.net
 
