--- a/application-dev.yml
+++ b/application-dev.yml
@@ -117,7 +117,7 @@ paascloud:
       namesrvAddr: paascloud-mq-rocket:9876
     sms:
       signName: 快乐学习网
-      regionId: cn-beijing
+      regionId: cn-beijing2333333
       endpoint:
       endpointName: cn-beijing
       product: 'your sms product'
