--- a/application-infowork-data-dev.yml
+++ b/application-infowork-data-dev.yml
@@ -1,3 +1,7 @@
+server:
+  port: 8022
+
+
 spring:
   zipkin:
     base-url: http://localhost:9016
@@ -9,3 +13,5 @@ spring:
     password: root
     druid:
       driver-class-name: com.mysql.jdbc.Driver
+
+
