--- a/application-infowork-data-dev.yml
+++ b/application-infowork-data-dev.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/zuul-auth?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: root
+    password: root333
     druid:
       driver-class-name: com.mysql.jdbc.Driver
 
